# ising-model

./: .gitignore  CMakeLists.txt  README.md
src/: MessageQueue.cpp  MessageQueue.h  SpinLattice.cpp  SpinLattice.h  display.cpp  display.h  evaluate.cpp  evaluate.h  main.cpp  simulate.cpp  simulate.h  userInput.cpp  userInput.h  userInput.txt
